--- a/quodlibet/NEWS
+++ b/quodlibet/NEWS
@@ -1,3 +1,8 @@
+3.0.91 [beta] (2014-02-28) - You'd have to be in space for that to work.
+------------------------------------------------------------------------
+
+See final release
+
 2.6.3 (2013-09-25) - The one that can't even go naked into space without dying!
 -------------------------------------------------------------------------------
 
